Correcciones de calidad

--- a/views/apprentices_edit.hbs
+++ b/views/apprentices_edit.hbs
@@ -360,12 +360,12 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to cancel the creation of the current record?</p>
+                        <p>Are you sure you want to cancel the update of the current record?</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-success" data-dismiss="modal"
-                            onclick="window.location.href='/'">Cancel Creation</button>
+                            onclick="window.location.href='/'">Cancel Update</button>
                     </div>
                 </div>
             </div>
