--- a/views/modifications_consult.hbs
+++ b/views/modifications_consult.hbs
@@ -76,7 +76,7 @@
 
                         <th><input type="checkbox" id="checkall" /></th>
                         <th>Modificaion Type</th>
-                        <th>Number Identification of Apprentice</th>
+                        <th>Number Identification <br> of Apprentice</th>
                         <th>Date Init</th>
                         <th>Date End</th>
                         <th>Count Days</th>
