--- a/views/modifications_edit.hbs
+++ b/views/modifications_edit.hbs
@@ -60,7 +60,7 @@
                             <label class="col-sm-3 col-form-label">Count Days</label>
                             <div class="col-sm-9">
                                 <input type="number" class="form-control" placeholder="Count Days" name="countDays"
-                                    id="countDays" value="{{modification.mod_count_day}}" />
+                                    id="countDays" value="{{modification.mod_count_day}}" readonly/>
                             </div>
                         </div>
                     </div>
