--- a/views/apprentices_create.hbs
+++ b/views/apprentices_create.hbs
@@ -286,7 +286,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Count Days</label>
                             <div class="col-sm-9">
-                                <input type="number" class="form-control" readonly name="countDays" id="countDays"/>
+                                <input type="number" class="form-control" readonly name="countDays" id="countDays" readonly/>
                             </div>
                         </div>
                     </div>
