--- a/views/modifications_create.hbs
+++ b/views/modifications_create.hbs
@@ -56,7 +56,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Count Days</label>
                             <div class="col-sm-9">
-                                <input type="number" class="form-control" placeholder="Count Days" name="countDays" id="countDays" />
+                                <input type="number" class="form-control" placeholder="Count Days" name="countDays" id="countDays" readonly/>
                             </div>
                         </div>
                     </div>
