Correcciones en db y page logout

--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -5,16 +5,24 @@
                 <div class="card" style="border-radius: 1rem;">
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-5 d-none d-md-block">
-                            <img
-                                    src="/images/imagen_login_compress_recort.jpg"
-                                    alt="login form"
-                                    class="img-fluid" style="border-radius: 1rem 0 0 1rem;"
-                            />
+                            <img src="/images/imagen_login_compress_recort.jpg" alt="login form" class="img-fluid"
+                                style="border-radius: 1rem 0 0 1rem;" />
                         </div>
                         <div class="col-md-5 col-lg-6 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-4 text-black">
+                                <div class="container ">
+                                    <img src="/images/logo_teleperformance_compress.png" alt="" style="width: 100%;">
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <h3>See you later...😬</h3>
+                                    <br>
+                                    <br>
+                                </div>
                                 <div class="pt-1 mb-4">
-                                    <button class="btn btn-dark btn-lg btn-block" onclick="location.href='/'">Login</button>
+                                    <button class="btn btn-dark btn-lg btn-block"
+                                        onclick="location.href='/'">Login</button>
                                 </div>
                             </div>
                         </div>
