--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,6 +25,7 @@
     <!-- Front Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
