--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,20 @@
     margin-right: 50%;
 }
 
+#tableConsult {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 
 @media (max-width: 600px) {
     #searchElementContainer {
         width: 90%;
         margin-right: 5%;
+    }
+
+    #tableConsult {
+        margin-left: 3%;
+        margin-right: 3%;
     }
 }
