--- a/views/apprentices_consult.hbs
+++ b/views/apprentices_consult.hbs
@@ -1,10 +1,10 @@
 <!-- Consultar Apprentices -->
 
 <br>
-<div class="container">
+<div class="">
 
 
-    <div class="col-md-20">
+    <div class="col-md-10">
         <h4>Consult Apprentices</h4>
 
         <br>
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div id="tableConsult">
             <div class="table-responsive">
 
 
