--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,11 +5,8 @@
         <div class="card" style="border-radius: 1rem;">
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img
-                src="/images/imagen_login_compress_recort.jpg"
-                alt="login form"
-                class="img-fluid" style="border-radius: 1rem 0 0 1rem;"
-              />
+              <img src="/images/imagen_login_compress_recort.jpg" alt="login form" class="img-fluid"
+                style="border-radius: 1rem 0 0 1rem;" />
             </div>
             <div class="col-md-5 col-lg-6 d-flex align-items-center">
               <div class="card-body p-4 p-lg-4 text-black">
@@ -23,12 +20,14 @@
                   <h4 class="fw-bold mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h4>
 
                   <div class="form-outline mb-4">
-                    <input type="number" id="numberIdentification" name="numberIdentification" class="form-control form-control-lg" placeholder="Enter your number identification" />
+                    <input type="number" id="numberIdentification" name="numberIdentification"
+                      class="form-control form-control-lg" placeholder="Enter your number identification" />
                     <label class="form-label" for="numberIdentification">Number Identification</label>
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Enter your password" />
+                    <input type="password" id="password" name="password" class="form-control form-control-lg"
+                      placeholder="Enter your password" />
                     <label class="form-label" for="password">Password</label>
                   </div>
 
@@ -44,3 +43,35 @@
     </div>
   </div>
 </section>
+
+<!-- Error Number Apprentice -->
+<div class="modal fade" id="errorInLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Error in login.</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Number Identification or/and password incorrects.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  mostrarAlerta({{ alerta }})
+
+  function mostrarAlerta(activar) {
+    if (activar == true) {
+      window.onload = setTimeout(() => {
+        $("#errorInLogin").modal('show');
+      }, 1000);
+    }
+  }
+</script>
