--- a/views/login.hbs
+++ b/views/login.hbs
@@ -44,7 +44,7 @@
   </div>
 </section>
 
-<!-- Error Number Apprentice -->
+<!-- Error Login -->
 <div class="modal fade" id="errorInLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
