--- a/views/modifications_create.hbs
+++ b/views/modifications_create.hbs
@@ -3,7 +3,7 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Create a new Modification</h4>
-            <form class="form-sample" id="createNewApprentice" action="/modifications/create/newModification" method="post">
+            <form class="form-sample" id="createNewModification" action="/modifications/create/newModification" method="post">
                 <p class="card-description">
                     Please fill in the following information 📝
                 </p>
@@ -15,7 +15,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Modification Type</label>
                             <div class="col-sm-9">
-                                <select class="form-control" id="typeModification" name="typeModification">
+                                <select class="form-control" id="typeModification" name="typeModification" onchange="validateInput('typeModification')">
                                     {{#each listOptionsTypeModification}}
                                         <option value="{{this}}">{{this}}</option>
                                     {{/each}}
@@ -27,7 +27,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Number Identification of Apprentice</label>
                             <div class="col-sm-9">
-                                <input type="number" class="form-control" placeholder="Document ID" name="documentId"
+                                <input type="number" class="form-control" placeholder="Document ID" name="documentId" onchange="validateInput('documentId')"
                                        id="documentId" required />
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Date Init</label>
                             <div class="col-sm-9">
-                                <input type="date" class="form-control" placeholder="mm/dd/yyyy" id="dateStart" name="dateStart" />
+                                <input type="date" class="form-control" placeholder="mm/dd/yyyy" id="dateStart" name="dateStart" onchange="validateInput('dateStart'); validateDates()"/>
                             </div>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Date End</label>
                             <div class="col-sm-9">
-                                <input type="date" class="form-control" placeholder="Number" id="dateEnd" name="dateEnd" onchange="calcularDias()" />
+                                <input type="date" class="form-control" placeholder="Number" id="dateEnd" name="dateEnd" onchange="calcularDias(); validateInput('dateEnd'); validateDates()"/>
                             </div>
                         </div>
                     </div>
@@ -124,12 +124,97 @@
                 </div>
             </div>
         </div>
+
+        <!-- Error Form -->
+        <div class="modal fade" id="formInvalid" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Form Incomplete.</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Some fields are not filled in, please validate.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Error Form -->
+        <div class="modal fade" id="dateError" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Error in date assignment.</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Error in dates, Date Init must not be greater than Date End.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <script>
     function enviarFormulario() {
-        document.getElementById("createNewApprentice").submit();
+        var typeModification = document.getElementById("typeModification");
+        var documentId = document.getElementById("documentId");
+        var dateStart = document.getElementById("dateStart");
+        var dateEnd = document.getElementById("dateEnd");
+
+        var isFormValid = true;
+
+        if (typeModification.value == "") {
+            typeModification.classList.add("invalid");
+            isFormValid = false;
+        }
+
+        if (documentId.value == "") {
+            documentId.classList.add("invalid");
+            isFormValid = false;
+        }
+
+        if (dateStart.value == "") {
+            dateStart.classList.add("invalid");
+            isFormValid = false;
+        }
+
+        if (dateEnd.value == "") {
+            dateEnd.classList.add("invalid");
+            isFormValid = false;
+        }
+
+        var isValidDates = validateDates();
+
+        if (isValidDates) {
+            if (isFormValid ) {
+                document.getElementById("createNewModification").submit();
+            } else {
+                $("#formInvalid").modal('show');
+            }
+        }
+    }
+
+    function validateInput(inputId) {
+        var inputToValidate = document.getElementById(inputId);
+
+        if (inputToValidate.value == "") {
+            inputToValidate.classList.add("invalid");
+        } else {
+            inputToValidate.classList.remove("invalid")
+        }
     }
 
     function calcularDias() {
@@ -139,6 +224,24 @@
         var contdias = Math.round(diasdif/(1000*60*60*24));
         
         document.getElementById('countDays').setAttribute('value', contdias + 1) 
-      
+    }
+
+    function validateDates() {
+        var dateStart = document.getElementById('dateStart');
+        var dateEnd = document.getElementById('dateEnd');
+
+        var fechaini = new Date(dateStart.value + 'T00:00');
+        var fechafin = new Date(dateEnd.value + 'T00:00');
+
+        if (fechaini > fechafin) {
+            dateStart.classList.add("invalid");
+            dateEnd.classList.add("invalid");
+
+            $("#dateError").modal('show');
+
+            return false;
+        }
+
+        return true;
     }
 </script>
