Inclución de validación en views modifications_create

--- a/views/modifications_create.hbs
+++ b/views/modifications_create.hbs
@@ -38,7 +38,7 @@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Date Init</label>
                             <div class="col-sm-9">
-                                <input type="date" class="form-control" placeholder="mm/dd/yyyy" id="dateStart" name="dateStart" onchange="validateInput('dateStart'); validateDates()"/>
+                                <input type="date" class="form-control" placeholder="mm/dd/yyyy" id="dateStart" name="dateStart" onchange="calcularDias(); validateInput('dateStart'); validateDates()"/>
                             </div>
                         </div>
                     </div>
